use a constant, StandardCharsets.UTF_8.name() instead of "UTF-8"